[package]
name = "guessing_game"
version = "0.1.0"
authors = ["Guillaume Balaine <igosuki@gmail.com>"]
edition = "2018"

[dependencies]
actix-web = "0.7"
actix = "0.7"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
json = "*"

bytes = "0.4"
futures = "0.1"
env_logger = "*"

mongodb = "0.3.12"
failure = "0.1.1"
dotenv = "0.13.0"

rand = "0.6.1"