[package]
name = "guessing_game"
version = "0.1.0"
authors = ["Guillaume Balaine <igosuki@gmail.com>"]
edition = "2018"

[dependencies]
actix-web = "4.0.1"
actix = "0.13.0"
serde = "1.0.137"
serde_json = "1.0.81"
serde_derive = "1.0.137"
json = "*"

bytes = "1.1.0"
futures = "0.3.21"
env_logger = "*"

mongodb = "2.2.2"
failure = "0.1.8"
dotenv = "0.15.0"

rand = "0.8.5"
